--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 		<div class="sidebar">
 			<ul>
 				<li><a href="#bann">Home</a></li>
-				<li><a href="#about">About</a></li>
+				<li><a href="#info">Info</a></li>
 				<li><a href="#contact">Contact</a></li>
+				<li><a href="#">Sign in</a></li>
+				<li><a href="#">Login</a></li>
 			</ul>
         </div>
         
@@ -27,9 +29,10 @@
 			<div class="container">
 				<h1><a href="">COMPILER</a></h1>
 				<ul>
-					<li><a href="#about">About</a></li>
+					<li><a href="#info">Info</a></li>
+					<li><a href="#contact">Contact</a></li>
 					<li><a href="#">Sign in</a></li>
-					<li><a href="#contact">Login</a></li>
+					<li><a href="#">Login</a></li>
 				</ul>
 				
 				<!--Menu Mobile-->
@@ -50,9 +53,9 @@
 		<marquee>INFORMATIKA, FASILKOM, UNIVERSITAS JEMBER</marquee>
 		
         <!--About-->
-		<section id="about">
+		<section id="info">
 			<div clas="container">
-				<h3>About</h3>
+				<h3>Info</h3>
                 <p style="margin-left: 50px; margin-right: 50px; "> Haloo Mahasiswa Informatika 🙌🙌🙌 Acara yang ditunggu - tunggu akhirnya datang jugaa🤩. _Computer Programming Learning (COMPILER)_ adalah pelatihan di bidang pemrograman yang khusus ditujukan untuk mahasiswa Informatika.</p></br></br>
                 <img src="img/b.jpg">
 			</div>
