--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
 		<section id="contact">
 			<div class="container">
 				<h3>Contact</h3>
-				<div class="col-5">
+				<div class="col">
 					<h4>Alamat</h4>
 					<p>Kampus Tegalboto, Jl. Kalimantan No.37, Krajan Timur, Sumbersari, Kec. Sumbersari, Kabupaten Jember, Jawa Timur 68121</p>
 				</div>
 				
-				<div class="col-5">
+				<div class="col">
 					<h4>E-mail</h4>
 					<p><a href="mailto:diajaya0@gmail.com">diajaya0@gmail.com</a></p>
 				</div>
 				
-				<div class="col-5">
+				<div class="col">
 					<h4>Telp/Hp</h4>
 					<p><a href="https://bit.ly/WhatsApp_chat_admin2" target="_blank">Contact Person</a></p>
 				</div>
