--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
 				<li><a href="#info">Info</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#">Sign in</a></li>
-				<li><a href="#">Login</a></li>
+				<li><a href="login.html">Login</a></li>
 			</ul>
         </div>
         
         <!--Header-->
 		<header>
 			<div class="container">
-				<h1><a href="">COMPILER</a></h1>
+				<h1><a href="index.html">COMPILER</a></h1>
 				<ul>
+					<li><a href="#bann">Home</a></li>
 					<li><a href="#info">Info</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a href="#">Sign in</a></li>
-					<li><a href="#">Login</a></li>
+					<li><a href="login.html">Login</a></li>
 				</ul>
 				
 				<!--Menu Mobile-->
