--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a href="#bann">Home</a></li>
 				<li><a href="#info">Info</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a href="#">Sign in</a></li>
+				<li><a href="signin.html">Sign in</a></li>
 				<li><a href="login.html">Login</a></li>
 			</ul>
         </div>
@@ -32,7 +32,7 @@
 					<li><a href="#bann">Home</a></li>
 					<li><a href="#info">Info</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#">Sign in</a></li>
+					<li><a href="signin.html">Sign in</a></li>
 					<li><a href="login.html">Login</a></li>
 				</ul>
 				
