--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 	<div class="sidebar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Sign in</a></li>
+			<li><a href="signin.html">Sign in</a></li>
 		</ul>
     </div>
         
@@ -25,7 +25,7 @@
 			<h1><a href="index.html">COMPILER</a></h1>
 			<ul>
                 <li><a href="index.html">Home</a></li>
-				<li><a href="#">Sign in</a></li>
+				<li><a href="signin.html">Sign in</a></li>
 			</ul>
 				
 			<!--Menu Mobile-->
